--- a/css/styles.css
+++ b/css/styles.css
@@ -2051,10 +2051,30 @@ textarea {
 
 .hidden { display: none; }
 
+.video {
+  background-color: #474747; 
+}
 
+.video-wrapper {
+        position: relative;
+        width: 100%;
+        padding-bottom: 56.25%; /* Pomer 16:9 (9/16 = 0.5625) */
+        height: 0;
+        overflow: hidden;
+        max-width: 1500px; /* volitelné – omezení max šírky */
+        margin: 0 auto;
+      }
 
-
-
-
-
-
+      .video-wrapper iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 0;
+      }
+      
+      .img-fluid-video {
+        max-width: 100%;
+        max-height: 100%;
+      }
